--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<link rel="stylesheet" href="./assets/css/places.css">
 	<!-- add budget.css -->
 	
+	<!-- mobile responsive -->
+
 	
 	<!-- <font> -->
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -35,6 +37,8 @@
 		<p id="currentDay" class="font-weight-bold lead headertext3"></p>
 	</header>
 
+<!-- itinerary and foursqaure  -->
+<div class = "topSection Container clearfix col-12">
 <!-- itinerary -->
 	<div class = "itineraryCon clearfix col-6">
 	<!-- Day blocks go here -->
@@ -167,17 +171,21 @@
 			<input id="placeInput" placeholder="Search by City/Country">
 			<button class="submitCity"><i class="fas fa-search"></i></button>
 		</form>
-	</div>
+		</div>
+	
+
 <div class="scroller" id="resultsContainer"></div>
-</div>	
+
 </div>
 </div>
+
 
 				<br>
 				<br>
 
 		
-
+<!-- currency and future budget -->
+<div class = "secondSection Container clearfix col-">
 	<div class="curCon clearfix col-6">
 		<h2> Leaving the Country? ...Don't Forget to Check Your Currency</h2>
 		<br><br>
@@ -305,12 +313,17 @@
 			</div>
 		</div>
 
-	</div>
+	
 	<hr>
 	<br>
+<!-- <div class = "budget clearfix col-6">
+
+</div> -->
+</div>
 
 
-	<div class="weather clearfix">
+
+	<div class="weather clearfix"></div>
 		<!-- weather -->
 	<!-- Search Container present/past btns -->
                 
