made responsive edits

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
 
 
-	<div class="weather clearfix"></div>
+	<div class="weather clearfix">
 		<!-- weather -->
 	<!-- Search Container present/past btns -->
                 
@@ -337,7 +337,7 @@
                 <div class="five-day-div bg-light p-3 m-3 w-100" id=forecast>
                 <div class = "card">	
 	
-
+				</div>
 	</div>
 </div>
 </div>
